--- a/module-2/lab-poker-master/your-code/main.ipynb
+++ b/module-2/lab-poker-master/your-code/main.ipynb
@@ -44,15 +44,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00024009603841536616\n",
+      "0.0014405762304921968\n",
+      "0.001965401545233478\n",
+      "0.003924646781789639\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/ipython/7.2.0/libexec/vendor/lib/python3.7/site-packages/ipykernel_launcher.py:5: DeprecationWarning: `comb` is deprecated!\n",
+      "Importing `comb` from scipy.misc is deprecated in scipy 1.0.0. Use `scipy.special.comb` instead.\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "four_of_a_kind = -1\n",
-    "full_house = -1\n",
-    "flush = -1\n",
-    "straight = -1"
+    "\n",
+    "from scipy.misc import comb \n",
+    "\n",
+    "combi = comb(52, 5)\n",
+    "\n",
+    "four_of_a_kind = 624/combi\n",
+    "full_house = 3744/combi\n",
+    "flush = 5108/combi\n",
+    "straight = 10200/combi\n",
+    "\n",
+    "print(four_of_a_kind)\n",
+    "print(full_house)\n",
+    "print(flush)\n",
+    "print(straight)"
    ]
   },
   {
@@ -77,15 +107,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02112845138055222\n",
+      "0.0475390156062425\n",
+      "0.4225690276110444\n",
+      "0.5011773940345369\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/ipython/7.2.0/libexec/vendor/lib/python3.7/site-packages/ipykernel_launcher.py:3: DeprecationWarning: `comb` is deprecated!\n",
+      "Importing `comb` from scipy.misc is deprecated in scipy 1.0.0. Use `scipy.special.comb` instead.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "three_of_a_kind = -1\n",
-    "two_pair = -1\n",
-    "one_pair = -1\n",
-    "no_pair = -1"
+    "\n",
+    "combi = comb(52, 5)\n",
+    "\n",
+    "three_of_a_kind = 54912/combi\n",
+    "two_pair = 123552/combi\n",
+    "one_pair = 1098240/combi\n",
+    "no_pair = 1302540/combi\n",
+    "\n",
+    "print(three_of_a_kind)\n",
+    "print(two_pair)\n",
+    "print(one_pair)\n",
+    "print(no_pair)"
    ]
   },
   {
@@ -107,9 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"width:100%;\"><tr><th>Cards</th><th>Hand</th><th>Probability</th><th>Math Expression</th></tr><tr><td><img src=\"royal-flush.jpeg\" style=\"float:right;\" /></td><td>royal flush</td><td>0.000154%</td><td><img src=\"royal-flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"straight-flush.jpeg\" style=\"float:right;\" /></td><td>straight flush</td><td>0.001385%</td><td><img src=\"straight-flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"four-of-kind.jpeg\" style=\"float:right;\" /></td><td>four of a kind</td><td>0.024010%</td><td><img src=\"four-of-kind.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"full-house.jpeg\" style=\"float:right;\" /></td><td>full house</td><td>0.144058%</td><td><img src=\"full-house.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"flush.jpeg\" style=\"float:right;\" /></td><td>flush</td><td>0.196540%</td><td><img src=\"flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"straight.jpeg\" style=\"float:right;\" /></td><td>straight</td><td>0.392465%</td><td><img src=\"straight.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"three-of-kind.jpeg\" style=\"float:right;\" /></td><td>three of a kind</td><td>2.112845%</td><td><img src=\"three-of-kind.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"two-pair.jpeg\" style=\"float:right;\" /></td><td>two pair</td><td>4.753902%</td><td><img src=\"two-pair.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"one-pair.jpeg\" style=\"float:right;\" /></td><td>one pair</td><td>42.256903%</td><td><img src=\"one-pair.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"no-pair.jpeg\" style=\"float:right;\" /></td><td>no pair</td><td>50.117739%</td><td><img src=\"no-pair.svg\" style=\"float:right;\" /></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from scipy.special import comb\n",
     "from IPython.display import HTML, display\n",
@@ -237,13 +308,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First Scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24%\n",
+      "I would fold\n"
+     ]
+    }
+   ],
+   "source": [
+    "# After the flop situation\n",
+    "# your chance to win is approximately 4 times the number of outs.\n",
+    "# Pot odds are 4:1 (represents the odds of risk versus return, for every $1 you bet you can potentially win $4). \n",
+    "# Should you fold or follow?\n",
+    "\n",
+    "# Para ganar, nuestros outs son: 9 corazones, 9 picas, 9 rombos, 7 corazones, 7 picas, 7 tréboles\n",
+    "\n",
+    "# No tengo en cuenta el 8 y el 10, porque, para llegar a hacer la escalera, tenemos que contar con que salga una en el \n",
+    "# river y dada esa carta, otra en el riverrun. No entraría dentro del caso del flop (o eso entiendo yo)\n",
+    "\n",
+    "prob_win1 = 6*4\n",
+    "print(str(prob_win1) + '%')\n",
+    "print(\"I would fold\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second Scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60%\n",
+      "I would follow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# After the flop situation\n",
+    "# your chance to win is approximately 4 times the number of outs.\n",
+    "# Pot odds are 4:1. Should you fold or follow?\n",
+    "\n",
+    "# Para ganar, nuestros outs son: 9 cartas de picas, 3 Jacks y 3 Kings\n",
+    "\n",
+    "prob_win2 = 15*4\n",
+    "print(str(prob_win2) + '%')\n",
+    "print(\"I would follow!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third Scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60%\n",
+      "I would follow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# After the flop situation\n",
+    "# your chance to win is approximately 4 times the number of outs.\n",
+    "# Pot odds are 4:1. Should you fold or follow?\n",
+    "\n",
+    "prob_win3 = 15*4\n",
+    "print(str(prob_win3) + '%')\n",
+    "print(\"I would follow!\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
