--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -861,11 +861,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2013-12-27</td>\n",
+       "      <td>60</td>\n",
+       "      <td>53</td>\n",
+       "      <td>45</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.39</td>\n",
+       "      <td>30.34</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2013-12-28</td>\n",
+       "      <td>62</td>\n",
+       "      <td>51</td>\n",
+       "      <td>40</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.17</td>\n",
+       "      <td>30.04</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2014-02-01</td>\n",
+       "      <td>76</td>\n",
+       "      <td>66</td>\n",
+       "      <td>55</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.81</td>\n",
+       "      <td>29.75</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>2014-02-10</td>\n",
+       "      <td>60</td>\n",
+       "      <td>48</td>\n",
+       "      <td>35</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.15</td>\n",
+       "      <td>30.02</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date  TempHighF  TempAvgF  TempLowF  DewPointHighF  DewPointAvgF  \\\n",
+       "4   2013-12-25         58        50        41           44.0          40.0   \n",
+       "6   2013-12-27         60        53        45           41.0          39.0   \n",
+       "7   2013-12-28         62        51        40           43.0          39.0   \n",
+       "42  2014-02-01         76        66        55           62.0          59.0   \n",
+       "51  2014-02-10         60        48        35           49.0          36.0   \n",
+       "\n",
+       "    DewPointLowF  HumidityHighPercent  HumidityAvgPercent  HumidityLowPercent  \\\n",
+       "4           36.0                 86.0                71.0                56.0   \n",
+       "6           37.0                 83.0                65.0                47.0   \n",
+       "7           33.0                 92.0                64.0                36.0   \n",
+       "42          41.0                 81.0                71.0                60.0   \n",
+       "51          30.0                 82.0                74.0                66.0   \n",
+       "\n",
+       "     ...    SeaLevelPressureAvgInches  SeaLevelPressureLowInches  \\\n",
+       "4    ...                        30.33                      30.27   \n",
+       "6    ...                        30.39                      30.34   \n",
+       "7    ...                        30.17                      30.04   \n",
+       "42   ...                        29.81                      29.75   \n",
+       "51   ...                        30.15                      30.02   \n",
+       "\n",
+       "    VisibilityHighMiles  VisibilityAvgMiles  VisibilityLowMiles  WindHighMPH  \\\n",
+       "4                  10.0                10.0                 7.0         10.0   \n",
+       "6                  10.0                 9.0                 7.0          7.0   \n",
+       "7                  10.0                10.0                 7.0         10.0   \n",
+       "42                 10.0                10.0                 9.0         14.0   \n",
+       "51                 10.0                 8.0                 4.0         15.0   \n",
+       "\n",
+       "    WindAvgMPH  WindGustMPH  PrecipitationSumInches  Events  \n",
+       "4          2.0         16.0                     NaN          \n",
+       "6          1.0         11.0                     NaN          \n",
+       "7          2.0         14.0                     NaN          \n",
+       "42         6.0         26.0                     NaN    Rain  \n",
+       "51         9.0         23.0                     NaN    Rain  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "missing_values = austin[austin.isnull().any(axis=1) == True]\n",
+    "missing_values.head()"
    ]
   },
   {
@@ -894,11 +1109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "1319\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "rows_mv = missing_values.shape[0]\n",
+    "rows_aus = austin.shape[0]\n",
+    "print(rows_mv)\n",
+    "print(rows_aus)"
    ]
   },
   {
@@ -910,11 +1138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.310841546626232"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "ratio = rows_mv / rows_aus * 100\n",
+    "ratio"
    ]
   },
   {
@@ -928,11 +1170,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                            0\n",
+       "TempHighF                       0\n",
+       "TempAvgF                        0\n",
+       "TempLowF                        0\n",
+       "DewPointHighF                   7\n",
+       "DewPointAvgF                    7\n",
+       "DewPointLowF                    7\n",
+       "HumidityHighPercent             2\n",
+       "HumidityAvgPercent              2\n",
+       "HumidityLowPercent              2\n",
+       "SeaLevelPressureHighInches      3\n",
+       "SeaLevelPressureAvgInches       3\n",
+       "SeaLevelPressureLowInches       3\n",
+       "VisibilityHighMiles            12\n",
+       "VisibilityAvgMiles             12\n",
+       "VisibilityLowMiles             12\n",
+       "WindHighMPH                     2\n",
+       "WindAvgMPH                      2\n",
+       "WindGustMPH                     4\n",
+       "PrecipitationSumInches        124\n",
+       "Events                          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "austin.isna().sum()"
    ]
   },
   {
@@ -944,11 +1218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.401061410159212"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "ratio = austin.PrecipitationSumInches.isna().sum() / austin.shape[0] * 100\n",
+    "\n",
+    "ratio"
    ]
   },
   {
@@ -970,16 +1257,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'TempHighF', 'TempAvgF', 'TempLowF', 'DewPointHighF',\n",
+       "       'DewPointAvgF', 'DewPointLowF', 'HumidityHighPercent',\n",
+       "       'HumidityAvgPercent', 'HumidityLowPercent',\n",
+       "       'SeaLevelPressureHighInches', 'SeaLevelPressureAvgInches',\n",
+       "       'SeaLevelPressureLowInches', 'VisibilityHighMiles',\n",
+       "       'VisibilityAvgMiles', 'VisibilityLowMiles', 'WindHighMPH', 'WindAvgMPH',\n",
+       "       'WindGustMPH', 'Events'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here \n",
     "\n",
+    "austin.drop(['PrecipitationSumInches'], axis=1, inplace=True)\n",
     "\n",
     "# Print `austin` to confirm the column is indeed removed\n",
     "\n",
-    "austin"
+    "austin.columns"
    ]
   },
   {
@@ -997,11 +1303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "austin_fixed = austin.interpolate(inplace=False)"
    ]
   },
   {
@@ -1013,11 +1321,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                          0\n",
+       "TempHighF                     0\n",
+       "TempAvgF                      0\n",
+       "TempLowF                      0\n",
+       "DewPointHighF                 0\n",
+       "DewPointAvgF                  0\n",
+       "DewPointLowF                  0\n",
+       "HumidityHighPercent           0\n",
+       "HumidityAvgPercent            0\n",
+       "HumidityLowPercent            0\n",
+       "SeaLevelPressureHighInches    0\n",
+       "SeaLevelPressureAvgInches     0\n",
+       "SeaLevelPressureLowInches     0\n",
+       "VisibilityHighMiles           0\n",
+       "VisibilityAvgMiles            0\n",
+       "VisibilityLowMiles            0\n",
+       "WindHighMPH                   0\n",
+       "WindAvgMPH                    0\n",
+       "WindGustMPH                   0\n",
+       "Events                        0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date                           0\n",
+       "TempHighF                      0\n",
+       "TempAvgF                       0\n",
+       "TempLowF                       0\n",
+       "DewPointHighF                  7\n",
+       "DewPointAvgF                   7\n",
+       "DewPointLowF                   7\n",
+       "HumidityHighPercent            2\n",
+       "HumidityAvgPercent             2\n",
+       "HumidityLowPercent             2\n",
+       "SeaLevelPressureHighInches     3\n",
+       "SeaLevelPressureAvgInches      3\n",
+       "SeaLevelPressureLowInches      3\n",
+       "VisibilityHighMiles           12\n",
+       "VisibilityAvgMiles            12\n",
+       "VisibilityLowMiles            12\n",
+       "WindHighMPH                    2\n",
+       "WindAvgMPH                     2\n",
+       "WindGustMPH                    4\n",
+       "Events                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "display(austin_fixed.isna().sum())\n",
+    "display(austin.isna().sum())"
    ]
   },
   {
